# Marianne

./: .gitignore  README.md
.github/skills/rust-skill-creator/: SKILL.md
.github/skills/security-review/references/: vulnerable-packages.md
.github/workflows/: release.yml
docs/: marianne-web.md
marianne/: Cargo.toml
marianne/.cargo/: config.toml
marianne/corpus/: caf_apl.md  caf_prime_activite.md  caf_rsa.md  chomage_are.md  identite_documents.md  impots_declaration.md  logement_locataire.md  recours_contestation.md  retraite_droits.md  sante_securite_sociale.md  travail_contrat.md  travail_licenciement.md  urssaf_autoentrepreneur.md
marianne/frontend/: index.html
marianne/frontend/scripts/: app.js
marianne/frontend/styles/: main.css
marianne/marianne-core/: Cargo.toml
marianne/marianne-core/src/: chat.rs  lib.rs  models.rs  state.rs
marianne/marianne-core/src/llm/: confidence.rs  mod.rs  watchdog.rs
marianne/marianne-core/src/rag/: embedder.rs  graph.rs  ingestion.rs  retriever.rs  store.rs
marianne/marianne-core/src/web/: cache.rs  mod.rs  rag_updater.rs  sources.rs
marianne/marianne-server/: Cargo.toml
marianne/marianne-server/src/: main.rs  state.rs
marianne/marianne-server/src/routes/: chat.rs  documents.rs  history.rs  mod.rs  profile.rs
marianne/marianne-web/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
marianne/marianne-web/src/: App.svelte  app.css
marianne/marianne-web/src/components/: ChatMessages.svelte  Header.svelte  InputArea.svelte  SettingsPanel.svelte  SetupModal.svelte  WebSettingsPage.svelte
marianne/marianne-web/src/lib/: api.ts  backend.ts  markdown.ts  sources.ts  types.ts
marianne/src-tauri/: Cargo.toml  tauri.conf.json
marianne/src-tauri/capabilities/: default.json
marianne/src-tauri/icons/: icon.icns
marianne/src-tauri/src/: lib.rs  main.rs  state.rs
marianne/src-tauri/src/commands/: chat.rs  corpus.rs  documents.rs  mod.rs  profile.rs  setup.rs
marianne/src-tauri/src/corpus/: updater.rs
marianne/src-tauri/src/documents/: extractor.rs
marianne/src-tauri/src/history/: sqlite.rs
marianne/src-tauri/src/llm/: confidence.rs  engine.rs  mod.rs  model.rs  sampler.rs  streamer.rs  tokenizer.rs
marianne/src-tauri/src/network/: connectivity.rs
marianne/src-tauri/src/profile/: mod.rs
marianne/src-tauri/src/prompts/: system.rs
marianne/src-tauri/src/rag/: embedder.rs  feedback.rs  graph.rs  mod.rs  retriever.rs  store.rs
marianne/src-tauri/src/web/: searcher.rs
