[package]
name = "marianne-core"
version = "0.0.2"
edition = "2021"
rust-version = "1.75"
description = "Marianne — Core logic (LLM, RAG, history, profile, corpus)"

[dependencies]
# LLM avec llama.cpp
llama-cpp-2 = { version = "0.1", features = ["sampler"] }
encoding_rs = "0.8"

# Téléchargement modèle
reqwest = { version = "0.12", features = ["stream", "json"] }

# Base vectorielle (optionnelle)
lancedb = { version = "0.29", default-features = false, optional = true }
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }

# Graphe de connaissances en mémoire (GraphRAG)
petgraph = { version = "0.6", features = ["serde-1"] }

# Embeddings locaux (optionnel)
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub"], optional = true }

# Base de données historique
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilitaires
anyhow = "1"
tracing = "0.1"
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
bincode = "1"

# Recherche web
scraper = "0.19"
urlencoding = "2"
url = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex-lite = "0.1"

# Déduplication RAG
dashmap = "6"

# Vérification intégrité modèles
sha2 = "0.10"

# Analyse de documents
pdf-extract = "0.7"

[features]
default = ["fastembed", "vectordb"]
vectordb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
metal = ["llama-cpp-2/metal"]
