[package]
name = "marianne-server"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "Marianne — Serveur HTTP (Axum) exposant l'API REST + SSE"

[[bin]]
name = "marianne-server"
path = "src/main.rs"

[dependencies]
marianne-core = { path = "../marianne-core" }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }

[features]
default = []
cuda = ["marianne-core/cuda"]
vulkan = ["marianne-core/vulkan"]
metal = ["marianne-core/metal"]
vectordb = ["marianne-core/vectordb"]
fastembed = ["marianne-core/fastembed"]
