[package]
name = "marianne"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "Marianne — Assistant Administratif Français 100% Local"

[lib]
name = "marianne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "marianne"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM avec Candle
candle-core = { version = "0.8", features = [] }
candle-transformers = "0.8"
candle-nn = "0.8"

# Tokenisation
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }

# Téléchargement modèle
hf-hub = { version = "0.3", features = ["tokio"] }
reqwest = { version = "0.12", features = ["stream", "json"] }

# Base vectorielle + FTS embarquée
lancedb = "0.15"
arrow-array = "53"
arrow-schema = "53"

# Graphe de connaissances en mémoire (GraphRAG)
petgraph = { version = "0.6", features = ["serde-1"] }

# Embeddings locaux
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub"] }

# Base de données historique
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Utilitaires
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
bincode = "1"

# Recherche web (Phase 8)
scraper = "0.19"
urlencoding = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.candle-core]
opt-level = 3

[profile.release.package.candle-transformers]
opt-level = 3

[profile.release.package.candle-nn]
opt-level = 3

[profile.release.package.fastembed]
opt-level = 3
