[package]
name = "marianne"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
description = "Marianne — Assistant Administratif Français 100% Local"

[lib]
name = "marianne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "marianne"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM avec llama.cpp
llama-cpp-2 = { version = "0.1", features = ["sampler"] }
encoding_rs = "0.8"

# Téléchargement modèle
reqwest = { version = "0.12", features = ["stream", "json"] }

# Base vectorielle (optionnelle — conflit CRT avec CUDA/ORT)
lancedb = { version = "0.29", default-features = false, optional = true }
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }

# Graphe de connaissances en mémoire (GraphRAG)
petgraph = { version = "0.6", features = ["serde-1"] }

# Embeddings locaux (optionnel — conflit CRT avec CUDA kernels)
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub"], optional = true }

# Base de données historique
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Utilitaires
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
bincode = "1"

# Recherche web (Phase 8)
scraper = "0.19"
urlencoding = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex-lite = "0.1"

# Déduplication RAG (U1)
dashmap = "6"

# Analyse de documents (U4)
pdf-extract = "0.7"

[features]
default = ["custom-protocol", "fastembed", "vectordb"]
custom-protocol = ["tauri/custom-protocol"]
vectordb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
metal = ["llama-cpp-2/metal"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.llama-cpp-2]
opt-level = 3
