[package]
name = "marianne"
version = "0.0.2"
edition = "2021"
rust-version = "1.75"
description = "Marianne — Assistant Administratif Français 100% Local"

[lib]
name = "marianne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "marianne"
path = "src/main.rs"

[dependencies]
# Core logic (toute la métier — LLM, RAG, history, profile…)
marianne-core = { path = "../marianne-core" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Needed by setup.rs commands (device detection, download, etc.)
llama-cpp-2 = { version = "0.1", features = ["sampler"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
num_cpus = "1.16"
futures-util = "0.3"
urlencoding = "2"

# Async + utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["llama-cpp-2/cuda", "marianne-core/cuda"]
vulkan = ["llama-cpp-2/vulkan", "marianne-core/vulkan"]
metal = ["llama-cpp-2/metal", "marianne-core/metal"]
vectordb = ["marianne-core/vectordb"]
fastembed = ["marianne-core/fastembed"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
